Remove image blob integration
